src/objects/deals__c.object
<CustomObject>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlusMCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PlusMCampaign</label>
        <referenceTo>PlusMCampaigns__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PushMCampaign_Id__c</fullName>
        <inlineHelpText>mysql Id</inlineHelpText>
        <label>PushMCampaign Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>mysql db field</inlineHelpText>
        <label>Record Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trigger_Amount__c</fullName>
        <label>Trigger Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>auto_reload_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>auto_reload_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>campaign_code__c</fullName>
        <label>campaign_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>campaign_id__c</fullName>
        <label>Campaign ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>commited_dollars_limit__c</fullName>
        <label>commited_dollars_limit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>committed_amount__c</fullName>
        <label>committed_amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>deals_taken_count__c</fullName>
        <label>deals_taken_count</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>end__c</fullName>
        <label>End</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_program_specific__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is_program_specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maximum_deals__c</fullName>
        <label>Maximum Deals</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maximum_deals_per_user__c</fullName>
        <label>maximum_deals_per_user</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reward_dollars_budget__c</fullName>
        <label>reward_dollars_budget</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reward_expiration__c</fullName>
        <label>reward_expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>short_description__c</fullName>
        <label>Short Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>spent_amount__c</fullName>
        <label>spent_amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>start__c</fullName>
        <label>Start</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_reward_count__c</fullName>
        <label>total_reward_count</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_sold_count__c</fullName>
        <label>total_sold_count</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Deal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>start__c</columns>
        <columns>end__c</columns>
        <columns>PlusMCampaign__c</columns>
        <columns>campaign_code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>